<resources>
    <string name="app_name">Launch Library API</string>
    <string name="rocket_name_mission">Rocket name | Mission</string>
    <string name="organisation_nation">Organisation / Nation</string>
    <string name="launch_pad_launch_complex">Launch pad / launch complex</string>
    <string name="t_timer">T-  00  :  00  :  00  :  00</string>
    <string name="go_sus">Go/Sus</string>
    <string name="remind_me">Remind me</string>
    <string name="days_hours_minutes_seconds">Days    Hours    Minutes    Seconds</string>
    <string name="description_t">description</string>
    <string name="image_description">this is the image provided by te api</string>
    <string name="upcoming">upcoming</string>
    <string name="previous">previous</string>
    <string name="tab_layout_for_homepage">tab layout for homepage</string>
    <string name="updated_timer">   T-  %02d : %02d : %02d : %02d</string>
    <string name="vehicle_liftoff">Vehicle liftoff!</string>
    <string name="update_probability"> %02d %</string>
    <string name="default_percentage">10%</string>
    <string name="okay_dialog_button">Okay</string>
    <string name="retry_button_text">retry</string>
    <string name="network_error_text">There is a problem with your network.</string>
    <string name="network_error_image">Network error image</string>
    <string name="rocket_image_view">rocket_image_view</string>
    <string name="rocket_name">Rocket name</string>
    <string name="manufacturer">manufacturer</string>
    <string name="commercial_govt">commercial/govt</string>
    <string name="country">Country :</string>
    <string name="country_zero">0</string>
    <string name="family">Family :</string>
    <string name="fam">fam</string>
    <string name="variant">Variant :</string>
    <string name="variant_res">variant</string>
    <string name="diameter">Diameter :</string>
    <string name="diameter_text">0m</string>
    <string name="height">Height :</string>
    <string name="height_text">0m</string>
    <string name="apogee">Apogee :</string>
    <string name="apogee_txt">0</string>
    <string name="max_stage">Max stage :</string>
    <string name="max_stage_txt">0</string>
    <string name="min_stage">Min stage :</string>
    <string name="min_stage_txt">0</string>
    <string name="capacity_leo">Capacity(LEO) :</string>
    <string name="capacity_txt">0</string>
    <string name="capacity_gso">Capacity(GSO) :</string>
    <string name="capacity_gso_txt">0</string>
    <string name="launches">Launches :</string>
    <string name="launches_txt">0</string>
    <string name="success">Success :</string>
    <string name="success_txt">0</string>
    <string name="failed">Failed :</string>
    <string name="failed_lauches_txt">0</string>
    <string name="to_thrust">To Thrust :</string>
    <string name="to_thrust_txt">0</string>
    <string name="network_error_text_view">There is a problem with your network</string>
    <string name="date">Date</string>
    <string name="message">message</string>
    <string name="date2">Date2</string>
    <string name="success_rate">60%</string>
    <string name="agency_name">agency name</string>
    <string name="success_txt_launch">success</string>
    <string name="launches_txt_launch">launches</string>
    <string name="def_lsuccess_launch">0</string>
    <string name="successful_txt">successful</string>
    <string name="def_fail_launches">0</string>
    <string name="failures">failures</string>
    <string name="def_landings">0</string>
    <string name="rocket_nlandings">rocket \nlandings</string>
    <string name="rocket">Rocket</string>
    <string name="orbit">Orbit</string>
    <string name="location_t">Location</string>
    <string name="mission">Mission</string>
    <string name="mission_name">TextView</string>
    <string name="mission_description">TextView</string>
    <string name="agency">Agency</string>
    <string name="status">Status</string>
    <string name="description">description</string>
    <string name="reason">reason</string>
    <string name="def_probability_percentage">60%</string>
    <string name="probability">Probability</string>
    <string name="go_for_launch">Go for launch</string>
    <string name="date_txt">date</string>
    <string name="date2_txt">date2</string>
    <string name="stat2">stat2</string>
    <string name="read_more">Read more</string>
    <string name="pad">pad</string>
    <string name="totl_landings">0</string>
    <string name="ttl_launchpad_launch">0</string>
    <string name="ttl_landings">0</string>
    <string name="total_launches">Total launches</string>
    <string name="total_landings">Total landings</string>
    <string name="location">Location</string>
    <string name="total_launches_text">0</string>
    <string name="mission_orbit_warning_message">Mission has no specified orbit planned yet.</string>
</resources>